# TsallisBrainSegmentation

./: CMakeLists.txt  LICENSE  README.md  TsallisBrainSegmentation.s4ext
BS/: BS.py  CMakeLists.txt
BS/Resources/: __init__.py
SlicerBS/: CMakeLists.txt  SlicerBS.py
SlicerBS/Resources/: extractor.py
SlicerBS/Resources/UI/: SlicerBS.ui
TsallisBrainSegmentation/: CMakeLists.txt  TsallisBrainSegmentation.py
TsallisBrainSegmentation/Resources/UI/: TsallisBrainSegmentation.ui
